# ResuMatchPro

./: .gitignore  .replit  ARCHITECTURE.md  README.md  SCORING_SYSTEM.md  analyzer.py  app.py  database.py  job_descriptions.py  keywords.py  parser.py  plan_generator.py  pyproject.toml  replit.md  report_generator.py  salary_analyzer.py  sample_resume.txt  test_analysis.py  test_integration.py
templates/: base.html  history.html  home.html  landing.html  results.html
