[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "docx2txt>=0.9",
    "fastapi>=0.120.2",
    "google-genai>=1.47.0",
    "google-generativeai>=0.8.5",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pymupdf>=1.26.5",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "reportlab>=4.4.4",
    "uvicorn>=0.38.0",
]
